// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headCmd displays by default the first 10 occurrences in the database 3`] = `
[
  [
    "          time  field        state           hid  
-1d 23:20:00[90m+0[39m  [7msleep[27m        [1mstart[22m           en61v
    08:30:00[90m+0[39m  [7msleep[27m        [1mend[22m             elfuv
    08:40:00[90m+0[39m  [7mproject[27m      german          d7j7m
    08:40:00[90m+0[39m  [7mtext[27m         fiction_book    w1fla
    09:10:00[90m+0[39m  [7mproject[27m      [1mend[22m             mbukz
    09:10:00[90m+0[39m  [7mtext[27m         [1mend[22m             puzt1
    09:30:00[90m+0[39m  [7menvironment[27m  outside         wqynb
    09:30:00[90m+0[39m  [7mstretch[27m      [1mstart[22m           7qaqo
    09:37:00[90m+0[39m  [7mrun[27m          [1mstart[22m           9bcqg
    09:37:00[90m+0[39m  [7mstretch[27m      [1mend[22m             6m3y5
",
  ],
]
`;

exports[`headCmd first metrics can display modifyTime head 1`] = `
[
  [
    "       time  field      state    hid  
[90mm[39m19:00:00[90m+0[39m  [7malcohol[27m             elfuv
[90mm[39m21:00:00[90m+0[39m  [7msocialize[27m  [1mend[22m      d7j7m
[90mm[39m21:01:00[90m+0[39m  [7msocialize[27m  [1mstart[22m    w1fla
[90mm[39m22:00:00[90m+0[39m  [7mperson[27m              en61v
",
  ],
]
`;

exports[`headCmd first metrics can just display occurTime head 1`] = `
[
  [
    "      time  field      state    hid  
19:00:00[90m+0[39m  [7malcohol[27m             elfuv
19:30:00[90m+0[39m  [7msocialize[27m  [1mstart[22m    w1fla
21:00:00[90m+0[39m  [7msocialize[27m  [1mend[22m      d7j7m
",
  ],
]
`;

exports[`headCmd first metrics defaults to a hybrid display of occurTime and createTime 1`] = `
[
  [
    "       time  field      state    hid  
 19:00:00[90m+0[39m  [7malcohol[27m             elfuv
 19:30:00[90m+0[39m  [7msocialize[27m  [1mstart[22m    w1fla
[90mc[39m20:00:00[90m+0[39m  [7mperson[27m              en61v
 21:00:00[90m+0[39m  [7msocialize[27m  [1mend[22m      d7j7m
",
  ],
]
`;

exports[`headCmd will display all if there are less than 10 occurrences in db 1`] = `
[
  [
    "      time  field     state        hid  
08:00:00[90m+0[39m  [7mcaffeine[27m               elfuv
10:00:00[90m+0[39m  [7mproject[27m   household    en61v
10:30:00[90m+0[39m  [7mproject[27m   [1mend[22m          d7j7m
",
  ],
]
`;
